--- a/cz/progress.html
+++ b/cz/progress.html
@@ -12,6 +12,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-cookies.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<script src="script/code.js"></script>	
 <script src="script/prog.js"></script>
 
 
@@ -54,7 +55,7 @@
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body onload="marksOnLoad()">
+  <body onload="marksOnLoad(), mainOnLoad()">
  
 
 <main>
@@ -89,11 +90,7 @@
   <div class="row mb-3">
    <div class="col-md-3 themed-grid-col">
     <div class="list-group">
-      <a href="index.html" class="list-group-item list-group-item-action">Общая информация</a>
-      <a href="progress.html" class="list-group-item list-group-item-action">Успеваемость</a>
-      <a href="achieve.html" class="list-group-item list-group-item-action">Достижения</a>
-      <a href="recomendation.html" class="list-group-item list-group-item-action">Рекомендации</a>
-      <a href="resume.html" class="list-group-item list-group-item-action">Резюме</a>
+     
     </div>
   </div>
  <div class="col-md-9 themed-grid-col">  
