--- a/cz/403.html
+++ b/cz/403.html
@@ -11,7 +11,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-cookies.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<script src="./script/angular-app.js"></script>
+<script src="./script/main.js"></script>
 
 <!--<script src="script/qwe.js"></script> -->
 <title>Главная страница</title>
