--- a/cz/progress.html
+++ b/cz/progress.html
@@ -26,7 +26,7 @@
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 <script src="script/code.js"></script>	
-<script src="script/study.js"></script>
+<script src="script/prog.js"></script>
 <title>Главная страница</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link
